--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>04 - Webpack</title>
-</head>
-<body>
+  </head>
+  <style>
+    html,
+    body {
+      margin: 0;
+      height: 100%;
+    }
+    .webgl {
+      width: 100%;
+      height: 95%;
+      display: block;
+    }
+  </style>
+  <body>
     <canvas class="webgl"></canvas>
-</body>
+    <button>시점변경</button>
+  </body>
+  <script src="script.js"></script>
 </html>
