--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>04 - Webpack</title>
+    <title>Three.js - Practice</title>
   </head>
   <style>
     html,
@@ -13,13 +13,33 @@
     }
     .webgl {
       width: 100%;
-      height: 95%;
+      height: 100%;
       display: block;
+    }
+    #header {
+      width: 100%;
+      padding: 15px;
+      position: fixed;
+      left: 0;
+      top: 0;
+      color: white;
+      display: flex;
+      justify-content: center;
+      text-align: center;
+    }
+    #button {
+      width: 100px;
+      position: fixed;
+      left: 0;
+      bottom: 0;
     }
   </style>
   <body>
+    <div id="header">
+      <span style="color: yellow">C</span>로 시점변경
+      <span style="color: yellow; margin-left: 10px">방향키</span>로 박스이동
+    </div>
     <canvas class="webgl"></canvas>
-    <button>시점변경</button>
+    <button id="button">시점변경</button>
   </body>
-  <script src="script.js"></script>
 </html>
