fix: box-accelAcceleration

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
       text-align: center;
     }
     #button {
-      width: 100px;
+      width: 200px;
       position: fixed;
       left: 0;
       bottom: 0;
@@ -40,6 +40,8 @@
       <span style="color: yellow; margin-left: 10px">방향키</span>로 박스이동
     </div>
     <canvas class="webgl"></canvas>
-    <button id="button">시점변경</button>
+    <div id="button">
+      <button id="view">시점변경</button><button id="motion">동작그만</button>
+    </div>
   </body>
 </html>
